--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start-react-app": "./index.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
     "cross-spawn": "^4.0.0",
-    "fs-extra": "^1.0.0",
+    "fs-extra": "^3.0.1",
     "validate-npm-package-name": "^3.0.0"
   }
 }
